syntax = "proto3";

package base.fm.data;

message Point2 {
  float x = 1;
  float y = 2;
}

message Point3 {
  float x = 1;
  float y = 2;
  float z = 3;
}

message Image {
  enum Type {
    NONE = 0;
    PNG = 1;
    JPEG = 2;
  }

  Type type = 1;
  bytes data = 2;
}

message ElementView {
  message Face {
    uint32 vertex1 = 1;
    uint32 vertex2 = 2;
    uint32 vertex3 = 3;
    uint32 texture1 = 4;
    uint32 texture2 = 5;
    uint32 texture3 = 6;
    uint32 normal1 = 7;
    uint32 normal2 = 8;
    uint32 normal3 = 9;
  }

  string element = 1;
  Image texture = 2;
  repeated Point2 texture_points = 3;
  repeated Face faces = 4;
}

message ElementViewState {
  string element = 1;
  int64 time = 2;
  repeated Point3 vertices = 3;
  repeated Point3 normals = 4;
}

message Scan {
  string name = 1;
  Point3 camera_position = 2;
  float camera_velocity = 3;
  float view_elevation = 4;
  uint32 image_width = 5;
  uint32 image_height = 6;
  uint32 depth_width = 7;
  uint32 depth_height = 8;
}

message ScanFrame {
  enum DepthConfidence {
    NONE = 0;
    LOW = 1;
    MEDIUM = 2;
    HIGH = 3;
  }

  string scan = 1;
  int64 time = 2;
  Image image = 3;
  repeated float depths = 4;
  repeated DepthConfidence depth_confidences = 5;
}

message Record {
  oneof type {
    ElementView element_view = 1;
    ElementViewState element_view_state = 2;
    Scan scan = 3;
    ScanFrame scan_frame = 4;
  }
}
